# cNARS

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  Global.cpp  Global.h  Narsese.cpp  README.md  config.json  main  main.cpp
.github/ISSUE_TEMPLATE/: -bug-report---briefly-describe-the-bug-here-.md  -bug-report--.md  -feature-request-.md
Interpreter/include/: Interpreter.hpp
Interpreter/src/: Interpreter.cpp
NAL/Functions/include/: ExtendedBooleanFunction.h  TemporalFunctions.h  TruthFunctions.h  UncertaintyMappingFunctions.h
NAL/Functions/src/: TruthFunctions.cpp  UncertaintyMappingFunctions.cpp
Narsese/Parser/: NarseseParser.cpp  NarseseParser.h  Parser.cpp  Parser.h  README.md  generate.cpp  generate.h  narsese.cpp  narsese.h  narsese.par  temp
Narsese/include/: Budget.h  Compound.h  Compound.inl  Connector.h  Copula.h  Evidence.h  Interval.h  Narsese.h  Operation.h  Sentence.h  Statement.h  Statement.inl  Task.h  Tense.h  Term.h  Term.inl  Terms.h  Truth.h  Variable.h  Variable.inl  Vocabulary.h
Narsese/src/: Budget.cpp  Compound.cpp  Connector.cpp  Copula.cpp  Narsese.cpp  Sentence.cpp  Statement.cpp  Task.cpp  Term.cpp  Terms.cpp  Truth.cpp  Variable.cpp
Tests/: test.cpp  test_parser.cpp  test_term.cpp  test_terms.cpp
examples/single_step/nal5/: nal5.17.nal
examples/single_step/nal7/: nal7.8.nal  nal7.vardetach3.nal  nal7.vardetach4.nal
utils/: IndexVar.cpp  IndexVar.h  defines.h  hash.cpp  hash.h
